<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/full_login"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:background="#1e8cbe">

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingBottom="10dip"
            android:background="#1e8cbe">

        <ImageView
                android:id="@+id/gravatarLogo"
                android:contentDescription="@string/app_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:src="@drawable/gravatar_logo"
                android:scaleType="centerInside"/>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_below="@id/gravatarLogo"
                android:layout_height="fill_parent"
                android:id="@+id/section1"
                android:paddingBottom="10dp">

            <TextView
                    android:id="@+id/l_email"
                    android:textColor="#f5f5f5"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

            <EditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:singleLine="true"
                    android:minHeight="40dp"
                    android:background="@android:drawable/editbox_background"
                    android:layout_below="@id/l_email"/>

            <TextView
                    android:id="@+id/l_password"
                    android:textColor="#f5f5f5"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_below="@id/email"/>

            <EditText
                    android:id="@+id/password"
                    android:textColor="#000000"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:minHeight="40dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="10dp"
                    android:password="true"
                    android:background="@android:drawable/editbox_background"
                    android:layout_below="@id/l_password"
                    android:inputType="textPassword"/>

            <Button
                    android:id="@+id/login"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/login"
                    android:shadowColor="#FFFFFF"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:background="@drawable/gravatar_button"/>
        </RelativeLayout>

        <TextView
                android:id="@+id/l_gravatardotcom"
                android:textColor="#f5f5f5"
                android:textSize="16dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:layout_below="@id/section1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gravatardotcom"
                android:text="@string/get_free_account"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:layout_below="@id/l_gravatardotcom"
                android:background="@drawable/gravatar_button"/>
    </RelativeLayout>
</ScrollView>